# routes/recipe.go
@@ -7,9 +7,9 @@ import (
 )
 
 type GetAllRecipeResponseData struct {
-	SearchParam string          `json:"searchParam"`
-	Category    string          `json:"category"`
-	Recipes     []models.Recipe `json:"recipes"`
+	SearchParam string          `json:"searchParam" example:"chicken"`
+	Category    string          `json:"category" example:"Chicken"`
+	Recipes     []models.Recipe `json:"recipes" `
 }
 
 //	@Summary		Get all recipes
@@ -19,9 +19,10 @@ type GetAllRecipeResponseData struct {
 //	@Produce		json
 //	@Param			searchParam	query		string							false	"Search term for recipes"
 //	@Param			category	query		string							false	"Category filter for recipes"
-//	@Success		200			{object}	models.RecipeExampleResponse	"Successfully retrieved recipes"
-//	@Failure		400			{object}	models.ErrorResponse			"Bad Request"
-//	@Failure		500			{object}	models.ErrorResponse			"Internal Server Error"
+//	@Success		200			{object}	models.BaseResponse{data=GetAllRecipeResponseData}	"Successfully retrieved recipes"
+//	@Failure		400			{object}	models.ErrorBadRequestResponse	"Bad Request"
+//	@Failure		500			{object}	models.ErrorInternalServerErrorResponse	"Internal Server Error"
+//  @Failure		404			{object}	models.ErrorNotFoundResponse			"Not Found"
 //	@Router			/recipes [get]
 func GetAllRecipe(c *fiber.Ctx) error {
 	return c.SendString("GetAllRecipe endpoint - To be implemented")
@@ -34,9 +35,9 @@ func GetAllRecipe(c *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			id	path		int										true	"Recipe ID"	minimum(1)
 //	@Success		200	{object}	models.BaseResponse{data=models.Recipe}	"Successfully retrieved recipe"
-//	@Failure		400	{object}	models.ErrorResponse					"Bad Request"
-//	@Failure		404	{object}	models.ErrorResponse					"Recipe not found"
-//	@Failure		500	{object}	models.ErrorResponse					"Internal Server Error"
+//	@Failure		400	{object}	models.ErrorBadRequestResponse					"Bad Request"
+//	@Failure		404	{object}	models.ErrorNotFoundResponse					"Recipe not found"
+//	@Failure		500	{object}	models.ErrorInternalServerErrorResponse					"Internal Server Error"
 //	@Router			/recipes/{id} [get]
 func GetRecipeById(c *fiber.Ctx) error {
 	return c.SendString("GetRecipeById endpoint - To be implemented")
